--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="title">canvas 实现图片截图</div>
-	<div class="subtitle">/1.放大缩小图片；/2.遮罩区域支持拖拽图片移动; /3.裁剪区域可以移动; /4.生成base64图片数据</div>
+	<div class="subtitle">功能：/1.支持从文件夹中拖拽添加图片; /2.放大缩小图片；/3.遮罩区域支持拖拽图片移动; /4.裁剪区域可以移动; /5.生成base64图片数据</div>
 	<div class="box" id="box">
 		<div class="inp">
 			<span class="addimg"><i class="text">添加图片</i><input type="file" id="loadimg"></span>
